--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <textarea class="col-md-10 textValue">
         </textarea>
-        <button class="btn saveBtn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
 
@@ -49,7 +49,79 @@
         </textarea>
         <button class="btn saveBtn col-md-1">Save</button>
       </div>
+
+
+    <div id="11" class="row timeDiv">
+      <div class="col-md-1 hour">
+        11AM
+      </div>
+      <textarea class="col-md-10 textValue">
+      </textarea>
+      <button class="btn saveBtn col-md-1">Save</button>
     </div>
+
+
+  <div id="12" class="row timeDiv">
+    <div class="col-md-1 hour">
+      12PM
+    </div>
+    <textarea class="col-md-10 textValue">
+    </textarea>
+    <button class="btn saveBtn col-md-1">Save</button>
+  </div>
+
+
+<div id="13" class="row timeDiv">
+  <div class="col-md-1 hour">
+    13PM
+  </div>
+  <textarea class="col-md-10 textValue">
+  </textarea>
+  <button class="btn saveBtn col-md-1">Save</button>
+</div>
+
+
+<div id="14" class="row timeDiv">
+  <div class="col-md-1 hour">
+    14PM
+  </div>
+  <textarea class="col-md-10 textValue">
+  </textarea>
+  <button class="btn saveBtn col-md-1">Save</button>
+</div>
+
+
+<div id="15" class="row timeDiv">
+  <div class="col-md-1 hour">
+    15PM
+  </div>
+  <textarea class="col-md-10 textValue">
+  </textarea>
+  <button class="btn saveBtn col-md-1">Save</button>
+</div>
+
+
+<div id="16" class="row timeDiv">
+  <div class="col-md-1 hour">
+    16PM
+  </div>
+  <textarea class="col-md-10 textValue">
+  </textarea>
+  <button class="btn saveBtn col-md-1">Save</button>
+</div>
+
+
+<div id="17" class="row timeDiv">
+  <div class="col-md-1 hour">
+    17PM
+  </div>
+  <textarea class="col-md-10 textValue">
+  </textarea>
+  <button class="btn saveBtn col-md-1">Save</button>
+</div>
+</div>
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
