fixx css styling for better look

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&family=EB+Garamond&family=Satisfy&display=swap" rel="stylesheet">
+
     <title>Work Day Scheduler</title>
   </head>
 
@@ -33,81 +37,81 @@
 
       <div id="9" class="row timeDiv">
         <div class="col-md-1 hour">
-          9AM
+          9:00
         </div>
         <textarea class="col-md-10 textValue">
         </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
       </div>
 
 
       <div id="10" class="row timeDiv">
         <div class="col-md-1 hour">
-          10AM
+          10:00
         </div>
         <textarea class="col-md-10 textValue">
         </textarea>
-        <button class="btn saveBtn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
       </div>
 
 
     <div id="11" class="row timeDiv">
       <div class="col-md-1 hour">
-        11AM
+        11:00
       </div>
       <textarea class="col-md-10 textValue">
       </textarea>
-      <button class="btn saveBtn col-md-1">Save</button>
+      <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
     </div>
 
 
   <div id="12" class="row timeDiv">
     <div class="col-md-1 hour">
-      12PM
+      12:00
     </div>
     <textarea class="col-md-10 textValue">
     </textarea>
-    <button class="btn saveBtn col-md-1">Save</button>
+    <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
   </div>
 
 
 <div id="13" class="row timeDiv">
   <div class="col-md-1 hour">
-    13PM
+    13:00
   </div>
   <textarea class="col-md-10 textValue">
   </textarea>
-  <button class="btn saveBtn col-md-1">Save</button>
+  <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
 </div>
 
 
 <div id="14" class="row timeDiv">
   <div class="col-md-1 hour">
-    14PM
+    14:00
   </div>
   <textarea class="col-md-10 textValue">
   </textarea>
-  <button class="btn saveBtn col-md-1">Save</button>
+  <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
 </div>
 
 
 <div id="15" class="row timeDiv">
   <div class="col-md-1 hour">
-    15PM
+    15:00
   </div>
   <textarea class="col-md-10 textValue">
   </textarea>
-  <button class="btn saveBtn col-md-1">Save</button>
+  <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
 </div>
 
 
 <div id="16" class="row timeDiv">
   <div class="col-md-1 hour">
-    16PM
+    16:00
   </div>
   <textarea class="col-md-10 textValue">
   </textarea>
-  <button class="btn saveBtn col-md-1">Save</button>
+  <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
 </div>
 
 
@@ -117,7 +121,7 @@
   </div>
   <textarea class="col-md-10 textValue">
   </textarea>
-  <button class="btn saveBtn col-md-1">Save</button>
+  <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
 </div>
 </div>
 
